Milestone2/Assignment 2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UPTBOUND
    RESERVED_SWITCH
    RESERVED_SUPER
    NEWLINE
    RESERVED_SEALED
    RESERVED_TRAIT
    TYPE_ANY
    TYPE_DOUBLE
    RESERVED_TRY
    RESERVED_LAZY
    TYPE_BYTE
    VIEWBOUND
    RESERVED_IMPLICIT
    TYPE_LONG
    TYPE_ANYREF
    RESERVED_FALSE
    TYPE_NULL
    TYPE_NOTHING
    ARRAY
    HASH
    RESERVED_CATCH
    TYPE_SHORT
    RESERVED_TYPE
    RESERVED_WITH
    AT_SIGN
    SCOMMENT
    RESERVED_THROW
    RESERVED_OVERRIDE
    LEFTARROW
    RESERVED_YIELD
    TYPE_UNIT
    LOTBOUND
    RESERVED_PUBLIC
    RESERVED_FORSOME
    RESERVED_TRUE
    RESERVED_FINALLY

Grammar

Rule 0     S' -> S
Rule 1     S -> compilation_unit
Rule 2     compilation_unit -> compilation_unit_0 top_stat_seq
Rule 3     compilation_unit_0 -> epsilon
Rule 4     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id sep
Rule 5     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id
Rule 6     top_stat_seq -> epsilon
Rule 7     top_stat_seq -> top_stat_seq top_stat sep
Rule 8     top_stat_seq -> top_stat_seq top_stat
Rule 9     top_stat -> local_modifier_0 tmpl_def
Rule 10    top_stat -> import
Rule 11    import -> RESERVED_IMPORT import_expr import_0
Rule 12    import_0 -> COMMA import_expr import_0
Rule 13    import_0 -> epsilon
Rule 14    import_expr -> path
Rule 15    modifier_0 -> modifier
Rule 16    modifier_0 -> modifier_0 modifier
Rule 17    modifier -> local_modifier
Rule 18    modifier -> access_modifier
Rule 19    local_modifier_0 -> epsilon
Rule 20    local_modifier_0 -> local_modifier_0 local_modifier
Rule 21    local_modifier -> RESERVED_FINAL
Rule 22    local_modifier -> RESERVED_ABSTRACT
Rule 23    access_modifier -> RESERVED_PRIVATE
Rule 24    access_modifier -> RESERVED_PROTECTED
Rule 25    tmpl_def -> RESERVED_CLASS class_def
Rule 26    tmpl_def -> RESERVED_OBJECT object_def
Rule 27    class_def -> id cmark class_param_clause class_template_opt
Rule 28    cmark -> epsilon
Rule 29    class_param_clause -> LPARAN class_params RPARAN
Rule 30    class_params -> epsilon
Rule 31    class_params -> class_param class_param_0
Rule 32    class_param_0 -> epsilon
Rule 33    class_param_0 -> COMMA class_param class_param_0
Rule 34    class_param -> val_var_1 id COLON type eq_expr_1
Rule 35    val_var_1 -> val_var
Rule 36    val_var_1 -> epsilon
Rule 37    val_var -> RESERVED_VAL
Rule 38    val_var -> RESERVED_VAR
Rule 39    eq_expr_1 -> EQ_ASGN expr
Rule 40    eq_expr_1 -> epsilon
Rule 41    class_template_opt -> class_template_opt_1 template_body
Rule 42    class_template_opt_1 -> RESERVED_EXTENDS id
Rule 43    class_template_opt_1 -> epsilon
Rule 44    template_body -> LCURLYB template_body_0 RCURLYB
Rule 45    template_body_0 -> epsilon
Rule 46    template_body_0 -> template_body_0 template_stat sep
Rule 47    template_body_0 -> template_body_0 template_stat
Rule 48    template_stat -> def
Rule 49    template_stat -> dcl
Rule 50    template_stat -> modifier_0 def
Rule 51    template_stat -> modifier_0 dcl
Rule 52    def -> path_var_def
Rule 53    def -> RESERVED_DEF fun_def
Rule 54    def -> tmpl_def
Rule 55    path_var_def -> RESERVED_VAR var_def
Rule 56    path_var_def -> RESERVED_VAL val_def
Rule 57    var_def -> id COLON type EQ_ASGN val_var_init
Rule 58    var_def -> id EQ_ASGN val_var_init
Rule 59    array_size -> LPARAN ints RPARAN
Rule 60    ints -> INT
Rule 61    ints -> INT COMMA ints
Rule 62    val_def -> id COLON type EQ_ASGN val_var_init
Rule 63    val_def -> id EQ_ASGN val_var_init
Rule 64    val_var_init -> array_init
Rule 65    val_var_init -> infix_expr
Rule 66    array_init -> LCURLYB epsilon RCURLYB
Rule 67    array_init -> LCURLYB array_init_0 RCURLYB
Rule 68    array_init -> TYPE_ARRAY LPARAN array_init_0 RPARAN
Rule 69    array_init_0 -> val_var_init
Rule 70    array_init_0 -> array_init_0 COMMA val_var_init
Rule 71    fun_def -> fun_sig col_type_1 EQ_ASGN LCURLYB block RCURLYB
Rule 72    col_type_1 -> COLON type
Rule 73    col_type_1 -> epsilon
Rule 74    fun_sig -> id fmark param_clause
Rule 75    fmark -> epsilon
Rule 76    param_clause -> LPARAN epsilon RPARAN
Rule 77    param_clause -> LPARAN params RPARAN
Rule 78    params -> param
Rule 79    params -> params COMMA param
Rule 80    param -> RESERVED_VAR id COLON type EQ_ASGN val_var_init
Rule 81    param -> RESERVED_VAR id COLON type
Rule 82    param -> id COLON type EQ_ASGN val_var_init
Rule 83    param -> id COLON type
Rule 84    dcl -> RESERVED_VAL val_dcl
Rule 85    dcl -> RESERVED_VAR var_dcl
Rule 86    dcl -> RESERVED_DEF fun_dcl
Rule 87    val_dcl -> id COLON type val_dcl_0
Rule 88    val_dcl_0 -> epsilon
Rule 89    val_dcl_0 -> COMMA val_dcl
Rule 90    var_dcl -> id COLON type
Rule 91    fun_dcl -> id f_dcl_mark param_clause LCURLYB COLON type RCURLYB
Rule 92    f_dcl_mark -> epsilon
Rule 93    path -> id
Rule 94    path -> RESERVED_THIS
Rule 95    path -> path DOT id
Rule 96    block_stat -> def
Rule 97    block_stat -> dcl
Rule 98    block_stat -> expr
Rule 99    block -> epsilon
Rule 100   block -> block_stat sep block
Rule 101   simple_expr -> RESERVED_NEW class_template
Rule 102   simple_expr -> simple_expr1
Rule 103   class_template -> id class_template_1
Rule 104   class_template_1 -> LPARAN id class_template_0 RPARAN
Rule 105   class_template_1 -> LPARAN literal class_template_0 RPARAN
Rule 106   class_template_1 -> LPARAN RPARAN
Rule 107   class_template_0 -> COMMA id class_template_0
Rule 108   class_template_0 -> COMMA literal class_template_0
Rule 109   class_template_0 -> epsilon
Rule 110   simple_expr1 -> literal
Rule 111   simple_expr1 -> id LSQRB access RSQRB
Rule 112   simple_expr1 -> path
Rule 113   simple_expr1 -> LPARAN exprs_1 RPARAN
Rule 114   simple_expr1 -> simple_expr1 argument_exprs
Rule 115   simple_expr1 -> id RESERVED_MATCH switch_block
Rule 116   prefix_expr -> simple_expr
Rule 117   prefix_expr -> OP_SUB infix_expr
Rule 118   prefix_expr -> OP_ADD infix_expr
Rule 119   prefix_expr -> OP_NOT infix_expr
Rule 120   type -> basic_type
Rule 121   type -> array_type
Rule 122   array_type -> TYPE_ARRAY LSQRB type RSQRB array_size
Rule 123   array_type -> TYPE_ARRAY LSQRB type RSQRB
Rule 124   sep -> SEMI_COLON
Rule 125   sep -> epsilon
Rule 126   qual_id -> id
Rule 127   qual_id -> qual_id DOT id
Rule 128   object_def -> id objmark class_template_opt
Rule 129   objmark -> epsilon
Rule 130   for_logic -> LPARAN for_init sep infix_expr sep for_upd
Rule 131   for_init -> epsilon
Rule 132   for_init -> path_var_def for_inits
Rule 133   for_init -> var_dcl for_inits
Rule 134   for_init -> infix_expr for_inits
Rule 135   for_inits -> COMMA for_inits
Rule 136   for_inits -> for_init
Rule 137   for_upd -> RPARAN
Rule 138   for_upd -> infix_expr RPARAN
Rule 139   switch_labels -> RESERVED_CASE literal RIGHTARROW
Rule 140   switch_labels -> RESERVED_DEFAULT RIGHTARROW
Rule 141   switch_labels -> RESERVED_CASE RESERVED__ RIGHTARROW
Rule 142   switch_block_statements -> switch_labels LCURLYB block RCURLYB sep
Rule 143   switch_block_statements -> switch_labels LCURLYB block RCURLYB
Rule 144   switch_block_statements -> switch_labels val_var_init
Rule 145   switch_block -> LCURLYB switch_block_statements_0 RCURLYB
Rule 146   switch_block_statements_0 -> switch_block_statements
Rule 147   switch_block_statements_0 -> switch_block_statements_0 switch_block_statements
Rule 148   expr -> RESERVED_IF LPARAN postfix_expr RPARAN if_b_m LCURLYB block RCURLYB if_s_m else_expression if_e_m
Rule 149   expr -> RESERVED_WHILE LPARAN postfix_expr RPARAN wh_b_m LCURLYB block wh_s_m RCURLYB wh_e_m
Rule 150   expr -> RESERVED_DO LCURLYB do_b_m block RCURLYB do_i_m RESERVED_WHILE LPARAN postfix_expr RPARAN do_s_m
Rule 151   expr -> RESERVED_FOR for_logic LCURLYB block RCURLYB
Rule 152   expr -> RESERVED_RETURN postfix_expr
Rule 153   expr -> RESERVED_RETURN
Rule 154   expr -> RESERVED_BREAK
Rule 155   expr -> RESERVED_CONTINUE
Rule 156   expr -> postfix_expr
Rule 157   expr -> id RESERVED_MATCH switch_block
Rule 158   wh_b_m -> epsilon
Rule 159   wh_s_m -> epsilon
Rule 160   wh_e_m -> epsilon
Rule 161   if_b_m -> epsilon
Rule 162   if_s_m -> epsilon
Rule 163   if_i_m -> epsilon
Rule 164   if_i1_m -> epsilon
Rule 165   if_e_m -> epsilon
Rule 166   do_b_m -> epsilon
Rule 167   do_i_m -> epsilon
Rule 168   do_s_m -> epsilon
Rule 169   else_expression -> RESERVED_ELSE if_i_m LCURLYB block RCURLYB if_is_m
Rule 170   else_expression -> if_i1_m
Rule 171   if_is_m -> epsilon
Rule 172   argument_exprs -> LPARAN exprs_1 RPARAN
Rule 173   exprs_1 -> postfix_expr
Rule 174   exprs_1 -> epsilon
Rule 175   exprs_1 -> exprs_1 COMMA postfix_expr
Rule 176   postfix_expr -> infix_expr id_1
Rule 177   postfix_expr -> infix_expr
Rule 178   id_1 -> id
Rule 179   id_1 -> id_1 id
Rule 180   infix_expr -> assign
Rule 181   infix_expr -> or_expression
Rule 182   assign -> simple_expr1 asgn or_expression
Rule 183   or_expression -> and_expression
Rule 184   or_expression -> or_expression OP_OR and_expression
Rule 185   xor_expression -> and_expression
Rule 186   xor_expression -> xor_expression OP_XOR and_expression
Rule 187   and_expression -> bit_or_expression
Rule 188   and_expression -> and_expression OP_AND bit_or_expression
Rule 189   bit_or_expression -> bit_and_expression
Rule 190   bit_or_expression -> bit_or_expression LO_OR bit_and_expression
Rule 191   bit_and_expression -> eq_expression
Rule 192   bit_and_expression -> bit_and_expression LO_AND eq_expression
Rule 193   eq_expression -> comp_expression
Rule 194   eq_expression -> eq_expression EQ comp_expression
Rule 195   eq_expression -> eq_expression NEQ comp_expression
Rule 196   comp_expression -> shift_expression
Rule 197   comp_expression -> comp_expression LEQ shift_expression
Rule 198   comp_expression -> comp_expression LT shift_expression
Rule 199   comp_expression -> comp_expression GEQ shift_expression
Rule 200   comp_expression -> comp_expression GT shift_expression
Rule 201   shift_expression -> add_expression
Rule 202   shift_expression -> shift_expression OP_RSHIFT add_expression
Rule 203   shift_expression -> shift_expression OP_LSHIFT add_expression
Rule 204   shift_expression -> shift_expression OP_RRSHIFT add_expression
Rule 205   add_expression -> mul_expression
Rule 206   add_expression -> add_expression OP_ADD mul_expression
Rule 207   add_expression -> add_expression OP_SUB mul_expression
Rule 208   mul_expression -> unary_expression
Rule 209   mul_expression -> mul_expression OP_MOD unary_expression
Rule 210   mul_expression -> mul_expression OP_MULT unary_expression
Rule 211   mul_expression -> mul_expression OP_DIVIDE unary_expression
Rule 212   unary_expression -> prefix_expr
Rule 213   unary_expression -> LPARAN infix_expr RPARAN
Rule 214   asgn -> EQ_ASGN
Rule 215   asgn -> ADD_ASGN
Rule 216   asgn -> SUB_ASGN
Rule 217   asgn -> MULT_ASGN
Rule 218   asgn -> DIV_ASGN
Rule 219   asgn -> MOD_ASGN
Rule 220   asgn -> LSHIFT_ASGN
Rule 221   asgn -> RSHIFT_ASGN
Rule 222   asgn -> AND_ASGN
Rule 223   asgn -> OR_ASGN
Rule 224   asgn -> XOR_ASGN
Rule 225   basic_type -> TYPE_INT
Rule 226   basic_type -> TYPE_FLOAT
Rule 227   basic_type -> TYPE_CHAR
Rule 228   basic_type -> TYPE_STRING
Rule 229   basic_type -> TYPE_BOOLEAN
Rule 230   basic_type -> RESERVED_NULL
Rule 231   id -> ID
Rule 232   access -> ID
Rule 233   access -> literal
Rule 234   access -> access COMMA ID
Rule 235   access -> access COMMA literal
Rule 236   literal -> BOOL
Rule 237   literal -> INT
Rule 238   literal -> CHAR
Rule 239   literal -> STRING
Rule 240   literal -> FLOAT
Rule 241   epsilon -> <empty>

Terminals, with rules where they appear

ADD_ASGN             : 215
AND_ASGN             : 222
ARRAY                : 
AT_SIGN              : 
BOOL                 : 236
CHAR                 : 238
COLON                : 34 57 62 72 80 81 82 83 87 90 91
COMMA                : 12 33 61 70 79 89 107 108 135 175 234 235
DIV_ASGN             : 218
DOT                  : 95 127
EQ                   : 194
EQ_ASGN              : 39 57 58 62 63 71 80 82 214
FLOAT                : 240
GEQ                  : 199
GT                   : 200
HASH                 : 
ID                   : 231 232 234
INT                  : 60 61 237
LCURLYB              : 44 66 67 71 91 142 143 145 148 149 150 151 169
LEFTARROW            : 
LEQ                  : 197
LOTBOUND             : 
LO_AND               : 192
LO_OR                : 190
LPARAN               : 29 59 68 76 77 104 105 106 113 130 148 149 150 172 213
LSHIFT_ASGN          : 220
LSQRB                : 111 122 123
LT                   : 198
MOD_ASGN             : 219
MULT_ASGN            : 217
NEQ                  : 195
NEWLINE              : 
OP_ADD               : 118 206
OP_AND               : 188
OP_DIVIDE            : 211
OP_LSHIFT            : 203
OP_MOD               : 209
OP_MULT              : 210
OP_NOT               : 119
OP_OR                : 184
OP_RRSHIFT           : 204
OP_RSHIFT            : 202
OP_SUB               : 117 207
OP_XOR               : 186
OR_ASGN              : 223
RCURLYB              : 44 66 67 71 91 142 143 145 148 149 150 151 169
RESERVED_ABSTRACT    : 22
RESERVED_BREAK       : 154
RESERVED_CASE        : 139 141
RESERVED_CATCH       : 
RESERVED_CLASS       : 25
RESERVED_CONTINUE    : 155
RESERVED_DEF         : 53 86
RESERVED_DEFAULT     : 140
RESERVED_DO          : 150
RESERVED_ELSE        : 169
RESERVED_EXTENDS     : 42
RESERVED_FALSE       : 
RESERVED_FINAL       : 21
RESERVED_FINALLY     : 
RESERVED_FOR         : 151
RESERVED_FORSOME     : 
RESERVED_IF          : 148
RESERVED_IMPLICIT    : 
RESERVED_IMPORT      : 11
RESERVED_LAZY        : 
RESERVED_MATCH       : 115 157
RESERVED_NEW         : 101
RESERVED_NULL        : 230
RESERVED_OBJECT      : 26
RESERVED_OVERRIDE    : 
RESERVED_PACKAGE     : 4 5
RESERVED_PRIVATE     : 23
RESERVED_PROTECTED   : 24
RESERVED_PUBLIC      : 
RESERVED_RETURN      : 152 153
RESERVED_SEALED      : 
RESERVED_SUPER       : 
RESERVED_SWITCH      : 
RESERVED_THIS        : 94
RESERVED_THROW       : 
RESERVED_TRAIT       : 
RESERVED_TRUE        : 
RESERVED_TRY         : 
RESERVED_TYPE        : 
RESERVED_VAL         : 37 56 84
RESERVED_VAR         : 38 55 80 81 85
RESERVED_WHILE       : 149 150
RESERVED_WITH        : 
RESERVED_YIELD       : 
RESERVED__           : 141
RIGHTARROW           : 139 140 141
RPARAN               : 29 59 68 76 77 104 105 106 113 137 138 148 149 150 172 213
RSHIFT_ASGN          : 221
RSQRB                : 111 122 123
SCOMMENT             : 
SEMI_COLON           : 124
STRING               : 239
SUB_ASGN             : 216
TYPE_ANY             : 
TYPE_ANYREF          : 
TYPE_ARRAY           : 68 122 123
TYPE_BOOLEAN         : 229
TYPE_BYTE            : 
TYPE_CHAR            : 227
TYPE_DOUBLE          : 
TYPE_FLOAT           : 226
TYPE_INT             : 225
TYPE_LONG            : 
TYPE_NOTHING         : 
TYPE_NULL            : 
TYPE_SHORT           : 
TYPE_STRING          : 228
TYPE_UNIT            : 
UPTBOUND             : 
VIEWBOUND            : 
XOR_ASGN             : 224
error                : 

Nonterminals, with rules where they appear

S                    : 0
access               : 111 234 235
access_modifier      : 18
add_expression       : 201 202 203 204 206 207
and_expression       : 183 184 185 186 188
argument_exprs       : 114
array_init           : 64
array_init_0         : 67 68 70
array_size           : 122
array_type           : 121
asgn                 : 182
assign               : 180
basic_type           : 120
bit_and_expression   : 189 190 192
bit_or_expression    : 187 188 190
block                : 71 100 142 143 148 149 150 151 169
block_stat           : 100
class_def            : 25
class_param          : 31 33
class_param_0        : 31 33
class_param_clause   : 27
class_params         : 29
class_template       : 101
class_template_0     : 104 105 107 108
class_template_1     : 103
class_template_opt   : 27 128
class_template_opt_1 : 41
cmark                : 27
col_type_1           : 71
comp_expression      : 193 194 195 197 198 199 200
compilation_unit     : 1
compilation_unit_0   : 2 4 5
dcl                  : 49 51 97
def                  : 48 50 96
do_b_m               : 150
do_i_m               : 150
do_s_m               : 150
else_expression      : 148
epsilon              : 3 6 13 19 28 30 32 36 40 43 45 66 73 75 76 88 92 99 109 125 129 131 158 159 160 161 162 163 164 165 166 167 168 171 174
eq_expr_1            : 34
eq_expression        : 191 192 194 195
expr                 : 39 98
exprs_1              : 113 172 175
f_dcl_mark           : 91
fmark                : 74
for_init             : 130 136
for_inits            : 132 133 134 135
for_logic            : 151
for_upd              : 130
fun_dcl              : 86
fun_def              : 53
fun_sig              : 71
id                   : 27 34 42 57 58 62 63 74 80 81 82 83 87 90 91 93 95 103 104 107 111 115 126 127 128 157 178 179
id_1                 : 176 179
if_b_m               : 148
if_e_m               : 148
if_i1_m              : 170
if_i_m               : 169
if_is_m              : 169
if_s_m               : 148
import               : 10
import_0             : 11 12
import_expr          : 11 12
infix_expr           : 65 117 118 119 130 134 138 176 177 213
ints                 : 59 61
literal              : 105 108 110 139 233 235
local_modifier       : 17 20
local_modifier_0     : 9 20
modifier             : 15 16
modifier_0           : 16 50 51
mul_expression       : 205 206 207 209 210 211
object_def           : 26
objmark              : 128
or_expression        : 181 182 184
param                : 78 79
param_clause         : 74 91
params               : 77 79
path                 : 14 95 112
path_var_def         : 52 132
postfix_expr         : 148 149 150 152 156 173 175
prefix_expr          : 212
qual_id              : 4 5 127
sep                  : 4 7 46 100 130 130 142
shift_expression     : 196 197 198 199 200 202 203 204
simple_expr          : 116
simple_expr1         : 102 114 182
switch_block         : 115 157
switch_block_statements : 146 147
switch_block_statements_0 : 145 147
switch_labels        : 142 143 144
template_body        : 41
template_body_0      : 44 46 47
template_stat        : 46 47
tmpl_def             : 9 54
top_stat             : 7 8
top_stat_seq         : 2 7 8
type                 : 34 57 62 72 80 81 82 83 87 90 91 122 123
unary_expression     : 208 209 210 211
val_dcl              : 84 89
val_dcl_0            : 87
val_def              : 56
val_var              : 35
val_var_1            : 34
val_var_init         : 57 58 62 63 69 70 80 82 144
var_dcl              : 85 133
var_def              : 55
wh_b_m               : 149
wh_e_m               : 149
wh_s_m               : 149
xor_expression       : 186

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . compilation_unit
    (2) compilation_unit -> . compilation_unit_0 top_stat_seq
    (3) compilation_unit_0 -> . epsilon
    (4) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id
    (241) epsilon -> .

    RESERVED_PACKAGE reduce using rule 241 (epsilon -> .)
    RESERVED_IMPORT reduce using rule 241 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 241 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 241 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 241 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 241 (epsilon -> .)
    $end            reduce using rule 241 (epsilon -> .)

    epsilon                        shift and go to state 1
    compilation_unit               shift and go to state 2
    compilation_unit_0             shift and go to state 3
    S                              shift and go to state 4

state 1

    (3) compilation_unit_0 -> epsilon .

    RESERVED_PACKAGE reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_IMPORT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_CLASS  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    $end            reduce using rule 3 (compilation_unit_0 -> epsilon .)


state 2

    (1) S -> compilation_unit .

    $end            reduce using rule 1 (S -> compilation_unit .)


state 3

    (2) compilation_unit -> compilation_unit_0 . top_stat_seq
    (4) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id
    (6) top_stat_seq -> . epsilon
    (7) top_stat_seq -> . top_stat_seq top_stat sep
    (8) top_stat_seq -> . top_stat_seq top_stat
    (241) epsilon -> .

    RESERVED_PACKAGE shift and go to state 7
    RESERVED_IMPORT reduce using rule 241 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 241 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 241 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 241 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 241 (epsilon -> .)
    $end            reduce using rule 241 (epsilon -> .)

    epsilon                        shift and go to state 5
    top_stat_seq                   shift and go to state 6

state 4

    (0) S' -> S .



state 5

    (6) top_stat_seq -> epsilon .

    RESERVED_IMPORT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_CLASS  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_OBJECT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_FINAL  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 6 (top_stat_seq -> epsilon .)
    $end            reduce using rule 6 (top_stat_seq -> epsilon .)


state 6

    (2) compilation_unit -> compilation_unit_0 top_stat_seq .
    (7) top_stat_seq -> top_stat_seq . top_stat sep
    (8) top_stat_seq -> top_stat_seq . top_stat
    (9) top_stat -> . local_modifier_0 tmpl_def
    (10) top_stat -> . import
    (19) local_modifier_0 -> . epsilon
    (20) local_modifier_0 -> . local_modifier_0 local_modifier
    (11) import -> . RESERVED_IMPORT import_expr import_0
    (241) epsilon -> .

    $end            reduce using rule 2 (compilation_unit -> compilation_unit_0 top_stat_seq .)
    RESERVED_IMPORT shift and go to state 11
    RESERVED_CLASS  reduce using rule 241 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 241 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 241 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 241 (epsilon -> .)

    local_modifier_0               shift and go to state 8
    epsilon                        shift and go to state 9
    top_stat                       shift and go to state 10
    import                         shift and go to state 12

state 7

    (4) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id
    (126) qual_id -> . id
    (127) qual_id -> . qual_id DOT id
    (231) id -> . ID

    ID              shift and go to state 13

    qual_id                        shift and go to state 14
    id                             shift and go to state 15

state 8

    (9) top_stat -> local_modifier_0 . tmpl_def
    (20) local_modifier_0 -> local_modifier_0 . local_modifier
    (25) tmpl_def -> . RESERVED_CLASS class_def
    (26) tmpl_def -> . RESERVED_OBJECT object_def
    (21) local_modifier -> . RESERVED_FINAL
    (22) local_modifier -> . RESERVED_ABSTRACT

    RESERVED_CLASS  shift and go to state 17
    RESERVED_OBJECT shift and go to state 16
    RESERVED_FINAL  shift and go to state 20
    RESERVED_ABSTRACT shift and go to state 19

    local_modifier                 shift and go to state 18
    tmpl_def                       shift and go to state 21

state 9

    (19) local_modifier_0 -> epsilon .

    RESERVED_CLASS  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 19 (local_modifier_0 -> epsilon .)


state 10

    (7) top_stat_seq -> top_stat_seq top_stat . sep
    (8) top_stat_seq -> top_stat_seq top_stat .
    (124) sep -> . SEMI_COLON
    (125) sep -> . epsilon
    (241) epsilon -> .

  ! reduce/reduce conflict for RESERVED_IMPORT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_CLASS resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_OBJECT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_FINAL resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_ABSTRACT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for $end resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_IMPORT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_CLASS  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_OBJECT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_FINAL  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_ABSTRACT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    $end            reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    SEMI_COLON      shift and go to state 22

  ! RESERVED_IMPORT [ reduce using rule 241 (epsilon -> .) ]
  ! RESERVED_CLASS  [ reduce using rule 241 (epsilon -> .) ]
  ! RESERVED_OBJECT [ reduce using rule 241 (epsilon -> .) ]
  ! RESERVED_FINAL  [ reduce using rule 241 (epsilon -> .) ]
  ! RESERVED_ABSTRACT [ reduce using rule 241 (epsilon -> .) ]
  ! $end            [ reduce using rule 241 (epsilon -> .) ]

    epsilon                        shift and go to state 23
    sep                            shift and go to state 24

state 11

    (11) import -> RESERVED_IMPORT . import_expr import_0
    (14) import_expr -> . path
    (93) path -> . id
    (94) path -> . RESERVED_THIS
    (95) path -> . path DOT id
    (231) id -> . ID

    RESERVED_THIS   shift and go to state 25
    ID              shift and go to state 13

    import_expr                    shift and go to state 26
    path                           shift and go to state 27
    id                             shift and go to state 28

state 12

    (10) top_stat -> import .

    SEMI_COLON      reduce using rule 10 (top_stat -> import .)
    RESERVED_IMPORT reduce using rule 10 (top_stat -> import .)
    RESERVED_CLASS  reduce using rule 10 (top_stat -> import .)
    RESERVED_OBJECT reduce using rule 10 (top_stat -> import .)
    RESERVED_FINAL  reduce using rule 10 (top_stat -> import .)
    RESERVED_ABSTRACT reduce using rule 10 (top_stat -> import .)
    $end            reduce using rule 10 (top_stat -> import .)


state 13

    (231) id -> ID .
